kubernetes/ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-serv
spec:
  ports:
  - name: 3000-3000
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: ui-depl # connection to deployment
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ui-depl
  name: ui-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui-depl
  template:
    metadata:
      labels:
        app: ui-depl
    spec:
      containers:
      - image: simpei-ui:latest
        imagePullPolicy: IfNotPresent
        name: simpei-ui
        ports:
        - containerPort: 3000
          protocol: TCP
